hphp/test/quick/xhp-malformed.php.expectf

Fatal error: Unexpected character in input: '/' (ASCII=47) (Line: %d, Char: %d)
syntax error, unexpected T_XHP_LABEL, expecting T_XHP_TAG_GT in %s on line 4
